fix centering on safari

--- a/app/routes/home/home.css
+++ b/app/routes/home/home.css
@@ -14,6 +14,6 @@
 }
 
 .login {
-  margin: 0 auto;
+  text-align: center;
   padding: 20px;
 }
